--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,23 @@
+amqp==1.4.9
+anyjson==0.3.3
 asgiref==3.4.1
+billiard==3.3.0.23
+celery==3.1.26.post2
 certifi==2021.5.30
 chardet==4.0.0
 Django==3.2.5
+django-celery==3.3.1
 django-cors-headers==3.7.0
 django-dotenv==1.4.2
 django-filter==2.4.0
+django-redis==5.0.0
 djangorestframework==3.12.4
 idna==2.10
+kombu==3.0.37
+psycopg2==2.9.1
 PyJWT==1.7.1
 pytz==2021.1
+redis==3.5.3
 requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
